syntax = "proto3";
package tendermint.types;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/types";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

// PartsetHeader
message IBCPartSetHeader {
  uint32 total = 1;
  bytes  hash  = 2;
}


// BlockID
message IBCBlockID {
  bytes         hash            = 1;
  IBCPartSetHeader part_set_header = 2 [(gogoproto.nullable) = false];
}
